input bug on iphone

--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -51,6 +51,14 @@
   padding: 0;
 }
 
+input:not([type=checkbox]):not([type=radio]),
+textarea,
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 .auth-form__input:invalid {
   color: #EE3465;
 }
@@ -59,7 +67,6 @@
   outline: none;
   border: solid 1px #E8E8E8;
   border-radius: 3px;
-  background-color: red;
 }
 
 .auth-form__input-error {
